package bigtalkdesignMod.v23.v23_4;

public class Receiver {

    public void action() {
        System.out.println("执行请求！");
    }
}
